--- a/app/public/src/admin/pages/index.ejs
+++ b/app/public/src/admin/pages/index.ejs
@@ -85,9 +85,9 @@
             </div>
             <div class="card">
                 <h3>Tổng Quan</h3>
-                <p>Số lượng hồ sơ hiện tại: <%= total %></p>
-                <p>Số yêu cầu đang xử lý: 30</p>
-                <p>Số yêu cầu đã hoàn thành: 90</p>
+                <p>Số lượng hồ sơ hiện tại: <%= totalApplications %></p>
+                <p>Số yêu cầu đang xử lý: <%= pendingApplicationsCount %></p>
+                <p>Số yêu cầu đã hoàn thành: <%= approvedApplicationsCount %></p>
             </div>
             <div class="card">
                 <h3>Các Yêu Cầu Gần Đây</h3>
